<resources>
    <string name="app_name">Chortke</string>
    <string name="value">Value : </string>
    <string name="detail">Description : </string>
    <string name="add_spend">Add Spend</string>
    <string name="add_cash">Increase Cash</string>
    <string name="min_cash">Decrease Cash</string>
    <string name="cash">Cash : </string>
    <string name="change_cash">Modify Cash</string>
    <string name="add_spends">Add Spend</string>
    <string name="spends_list">Spends List</string>
    <string name="home">Home</string>
    <string name="food">Food</string>
    <string name="health">Health</string>
    <string name="shopping">Shop</string>
    <string name="traffic">Transport</string>
    <string name="clothes">Clothes</string>
    <string name="phone">Phone</string>
    <string name="car">Car</string>
    <string name="hobby">Hobbies</string>
    <string name="internet">Internet</string>
    <string name="other">Other</string>
    <string name="loan_pay">Loan</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="show">Show</string>
    <string name="language">Language :</string>
    <string name="developer">Developer :</string>
    <string name="myName">Amirhossein Poor emadi</string>
    <string name="email">Email :</string>
    <string name="myEmail">amirhossein79.e@gmail.com</string>
    <string name="setting">Setting</string>
    <string name="Bug">Report a Bug</string>
    <string name="exit">Exit</string>
    <string name="enter_value">Please enter value</string>
    <string name="date_true">You must select one day minimum</string>
    <string name="alert_title">Exit</string>
    <string name="alert_message">Are you want exit ?</string>
    <string name="alert_pos">Yes</string>
    <string name="alert_neg">No</string>
    <string name="total">Total : </string>
    <string name="description">Cash chart</string>
    <string name="name">Name :</string>
    <string name="account">Account :</string>
    <string name="set_date">Set Date</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="today">Today</string>
    <string name="plz_true">Please enter true detail</string>
    <string name="cheque_reminder">Reminder of bank cheque with amount of </string>
    <string name="to_date">in </string>
    <string name="cheque_reminder1">یادآوری چک با مبلغ </string>
    <string name="to_date1"> به تاریخ</string>
    <string name="cheque_list">List of Cheques</string>
    <string name="add_cheque">Add Cheque</string>
    <string-array name="language_array">
        <item>"Select language"</item>
        <item>"فارسی"</item>
        <item>"English"</item>
    </string-array>

</resources>
