<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.amirhosseinemadi.myAccountant.viewModel.ViewModelMain" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawer">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back_spend"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toolbar_main">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UselessLeaf">
                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:layout_marginRight="@dimen/dp32"
                android:layout_marginLeft="@dimen/dp32"
                app:cardCornerRadius="@dimen/dp8"
                app:cardElevation="@dimen/dp8">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_background"
                    android:padding="@dimen/dp4">


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/cash"
                        android:textSize="@dimen/sp25">
                    </androidx.appcompat.widget.AppCompatTextView>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:text="@{viewModel.income}"
                        android:textSize="30sp"
                        android:inputType="numberDecimal"
                        android:layout_marginLeft="@dimen/dp8">
                    </androidx.appcompat.widget.AppCompatTextView>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/myButton"
                    android:background="@drawable/btn_background2"
                    android:layout_marginRight="@dimen/dp32"
                    android:layout_marginLeft="@dimen/dp32"
                    android:text="@string/change_cash"
                    android:drawableStart="@drawable/ic_wallet"
                    android:onClick="@{(a)->viewModel.changeIncome()}">
                </androidx.appcompat.widget.AppCompatButton>



            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:background="@drawable/main_card_background"
                android:orientation="vertical">

                <com.github.mikephil.charting.charts.LineChart
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:id="@+id/chart"
                    tools:ignore="NestedWeights"
                    android:layout_marginLeft="@dimen/dp24"
                    android:layout_marginRight="@dimen/dp24"
                    android:layout_marginTop="@dimen/dp8"
                    android:layout_marginBottom="@dimen/dp8">
                </com.github.mikephil.charting.charts.LineChart>

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/myButton"
                    android:layout_marginRight="@dimen/dp32"
                    android:layout_marginLeft="@dimen/dp32"
                    android:layout_marginBottom="@dimen/dp4"
                    android:text="@string/add_spends"
                    android:drawableStart="@drawable/ic_money"
                    android:onClick="@{(a)->viewModel.spend()}">
                </androidx.appcompat.widget.AppCompatButton>

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/myButton"
                    android:layout_marginLeft="@dimen/dp32"
                    android:layout_marginRight="@dimen/dp32"
                    android:layout_marginTop="@dimen/dp4"
                    android:text="@string/spends_list"
                    android:drawableStart="@drawable/ic_list"
                    android:layout_marginBottom="@dimen/dp16"
                    android:onClick="@{(a)->viewModel.showList()}">
                </androidx.appcompat.widget.AppCompatButton>

            </LinearLayout>




        </LinearLayout>

        </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/main_menu"
            android:id="@+id/nav"
            app:headerLayout="@layout/header_nav">
        </com.google.android.material.navigation.NavigationView>


    </androidx.drawerlayout.widget.DrawerLayout>


</layout>